Примерно похоже на рабочий вариант
Сделал logout.
Подключил bootstrap 3 и сделал оформление.
Вместо реальных значений пока используется рандом, для демонстрации.
Подгружается информация о юзере, аватарка.
Вдобавок к лайкам, то же самое для комментов.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: fact
     volumes:
-      # - /Volumes/polter/Projects/Ta/Followers Activity/followers_activity:/usr/src/app
-      - ~/Documents/followers_activity:/usr/src/app
+       - /Volumes/polter/Projects/Ta/Followers Activity/followers_activity:/usr/src/app
+#      - ~/Documents/followers_activity:/usr/src/app
     ports:
       - "8000:3000"
