Исправил глючок, когда ноль лайков или комментов
Когда ноль, то показывает ноль процентов и всё по нулям.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   node-web:
-#    build: .
+    build: .
     image: bonustm/followers-activity:latest
     container_name: fact
     volumes:
